# SmartFrom

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  batches.py  deps.py  exports.py  extractions.py  health.py  mappings.py  templates.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: entities.py
backend/app/schemas/: __init__.py  auth.py  common.py  domain.py
backend/app/services/: __init__.py  exporter.py  presets.py  queue.py  vision.py
backend/app/tests/: test_exporter.py  test_vision.py
backend/app/workers/: __init__.py  tasks.py  worker.py
backend/assets/presets/: empleados.xlsx
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuthShell.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.test.ts  api.ts
frontend/src/pages/: DashboardPage.tsx  ForgotPasswordPage.tsx  GuidePage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  TemplatesPage.tsx  ValidationPage.tsx
frontend/src/styles/: index.css
infra/nginx/: default.conf
